The basic structure of the website

--- a/home.html
+++ b/home.html
@@ -29,5 +29,6 @@
             <p>Stay tuned for the latest updates from GlamourTech!</p>
         </section>
     </div>
+    <script src="JS/home.js"></script>
 </body>
 </html>
