--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="CSS/login.css">
 </head>
 <body>
     <header>
@@ -74,6 +74,6 @@
         </div>
 </div>
     </footer>
-    <script src="login.js"></script>
+    <script src="JS/login.js"></script>
 </body>
 </html>
