Updateed some files to match the final structure

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <input type="text" placeholder="Search for products...">
         </div>
         <div class="icons">
-            <a href="login.html" class="icon">Login</a>
+            <a href="pages/user/login.html" class="icon">Login</a>
             <a href="#" class="icon" data-page="wishlist">Wishlist</a>
             <a href="#" class="icon" data-page="cart">Cart</a>
-            <a href="profile.html" class="icon hidden">Profile</a>
+            <a href="#" class="icon hidden" data-page="profile">Profile</a>
         </div>
     </header>
     <nav>
