--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GlamourTech Admin Panel</title>
-    <link rel="stylesheet" href="../../CSS/dashboard.css">
+    <link rel="stylesheet" href="C:\Users\ywsfy\Downloads\Depi-project\GlamourTech\CSS\dashboard.css">
 </head>
 <body>
     <div class="sidebar">
         <h2>Admin Panel</h2>
         <ul>
-            <li><a href="#">Edit Categories</a></li>
-            <li><a href="#">Edit Products</a></li>
-            <li><a href="#">Edit Users</a></li>
+            <li><a href="#" class="nav-link">Edit Categories</a></li>
+            <li><a href="#" class="nav-link">Edit Products</a></li>
+            <li><a href="#" class="nav-link">Edit Users</a></li>
         </ul>
     </div>
 
-    <div class="main-content">
+    <div class="content" id="main-content">
         <div class="header">
             <h1>Welcome to GlamourTech Admin Dashboard</h1>
         </div>
@@ -36,6 +36,6 @@
             </div>
         </div>
     </div>
-    <script src="../../JS/dashboard.js"></script>
+    <script src="C:\Users\ywsfy\Downloads\Depi-project\GlamourTech\JS\dashboard.js"></script>
 </body>
 </html>
