--- a/pages/admin/dashboard.html
+++ b/pages/admin/dashboard.html
@@ -10,13 +10,13 @@
     <div class="sidebar">
         <h2>Admin Panel</h2>
         <ul>
-            <li><a href="#">Edit Categories</a></li>
-            <li><a href="#">Edit Products</a></li>
-            <li><a href="#">Edit Users</a></li>
+            <li><a href="#" class="nav-link">Edit Categories</a></li>
+            <li><a href="#" class="nav-link">Edit Products</a></li>
+            <li><a href="#" class="nav-link">Edit Users</a></li>
         </ul>
     </div>
 
-    <div class="main-content">
+    <div class="content" id="main-content">
         <div class="header">
             <h1>Welcome to GlamourTech Admin Dashboard</h1>
         </div>
