--- a/pages/user/login.html
+++ b/pages/user/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="/GlamourTech/CSS/login.css">
+    <link rel="stylesheet" href="../../CSS/login.css">
 </head>
 <body>
     <header>
@@ -72,8 +72,7 @@
                 © 2024, GlamourTech.com, All rights reserved.
             </span>
         </div>
-</div>
     </footer>
-    <script src="/GlamourTech/JS/main.js"></script>
+    <script src="../../JS/login.js"></script>
 </body>
 </html>
