--- a/index.html
+++ b/index.html
@@ -16,29 +16,21 @@
             <input type="text" placeholder="Search for products...">
         </div>
         <div class="icons">
-            <a href="pages/user/login.html" class="icon">Login</a>
-            <a href="#" class="icon" data-page="wishlist">Wishlist</a>
+            <a href="pages/user/login.html" id="login-icon">Login</a>
+            <a href="./pages/user/wishlist.html" class="icon" data-page="wishlist">Wishlist</a>
             <a href="#" class="icon" data-page="cart">Cart</a>
-            <a href="#" class="icon hidden" data-page="profile">Profile</a>
+            <a href="#" id="profile-icon"data-page="profile">Profile</a>
         </div>
     </header>
-    <nav>
+    <nav >
         <ul>
             <li><a href="#" data-page="home">Home</a></li>
             <li><a href="#" data-page="categories">Categories ▾</a>
                 <ul>
-                    <li><a href="#" data-page="categories">All Categories</a></li>
-                    <li><a href="#" data-page="electronics">Electronics ▸</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                        </ul>
+                    <li><a href="#" data-page="electronics">Electronics </a>
                     </li>
-                    <li><a href="#" data-page="fashion">Fashion ▸</a>
-                        <ul>
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                        </ul>
+                    <li><a href="#" data-page="fashion">Fashion </a>
+    
                     </li>
                 </ul>
             </li>
