--- a/pages/user/wishlist.html
+++ b/pages/user/wishlist.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wishlist</title>
-    <link rel="stylesheet" href="CSS/wishlist.css">
+    <title>GlamourTech | Wishlist</title>
+    <link rel="stylesheet" href="/GlamourTech/CSS/wishlist.css">
+
 </head>
 <body>
-    <main>
-        <h2>Your Wishlist</h2>
-        <p>Here you can see all the products you've added to your wishlist.</p>
-        <!-- Wishlist content -->
-    </main>
-    <script src="JS/wishlist.js"></script>
+    <div class="container">
+        
+        <div class="wishlist-container">
+            <h3>My Wishlist</h3>
+        </div>
+    </div>
+    
 </body>
 </html>
