--- a/pages/user/about.html
+++ b/pages/user/about.html
@@ -3,16 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GlamourTech - About Us</title>
-    <link rel="stylesheet" href="CSS/about.css">
+    <title>About Us</title>
+    <link rel="stylesheet" href="../../CSS/about.css">
 </head>
 <body>
-    <main id="main-content">
-        <h2>About Us</h2>
-        <p>Welcome to GlamourTech! We are dedicated to providing the best products in the fashion and electronics sectors. Our mission is to offer high-quality products at competitive prices.</p>
-        <p>Founded in 2024, GlamourTech has quickly become a trusted name in the industry. Our team is passionate about customer satisfaction and strives to meet your needs with excellence.</p>
-        <p>Thank you for choosing GlamourTech!</p>
-    </main>
-    <script src="JS/main.js"></script>
+    <section class="about-us" id="about" id=" main-content" >
+        <div class="content">
+            <img src="../../images/logo.png" alt="About Us" class="about-image">
+            <div class="text-content">
+                <h1>About Us</h1>
+                <p>Welcome to GlamourTech, where innovation meets style. We are a leading e-commerce platform specializing in the latest electronics and cutting-edge fashion trends. Our mission is to bring you the best of both worlds, ensuring that you stay ahead in technology and fashion.</p>
+                <p>At GlamourTech, we understand that your needs and preferences are unique. That’s why we curate a diverse selection of high-quality electronics and trendy fashion items to fit every lifestyle. Whether you’re looking for the newest gadgets, stylish apparel, or exclusive accessories, we’ve got you covered.</p>
+                <p>Thank you for choosing GlamourTech. We look forward to serving you and helping you discover the perfect blend of technology and fashion.</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
